syntax= "proto3";

package randomPackage;

service Random{
    rpc PingPong(PingRequest) returns (PongResponse) {};   //rpc for unary streaming
    rpc RandomNumbers(NumberRequest) returns (stream NumberResponse) {};  //rpc for server streaming
    rpc TodoList(stream TodoRequest) returns  (TodoResponse) {};  //rpc for client streaming
    rpc Chat(stream ChatRequest) returns (stream ChatResponse) {}; //rpc for Bidirectional streaming


}


message PingRequest{
    string message=1;

}

message PongResponse{
    string message=1;

}

message NumberRequest{
    int32 maxVal=1;

}

message NumberResponse{
    int32 num=1; 
}


message TodoRequest{
    string todo=1;
    string status=2;


}


message TodoResponse{
    repeated TodoRequest data=1;
}


message ChatRequest{
    string message=1;
    
}

message ChatResponse{
    string username=1;
    string message=2;
    
}